actualice la pagina

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         </div>
         <div class="hero-description">
           <h1 class="h1">
-            <span class="h3">¡Hola a todos!</span>
+            <span class="h3">¡UNO DE LOS MEJORES!</span>
             
           </h1>
-          <p>“La primera vez que puse un pie en una cancha de baloncesto me convertí en un hombre de negocios”</p>
+          <p>“es un jugador de baloncesto estadounidense que actualmente pertenece a la plantilla 
+            de Los Angeles Lakers de la NBA. Con 2,06 metros de estatura, su posición es la de alero, pero su talento,
+             versatilidad y poderío físico le permiten jugar tanto de base como de ala-pívot.”</p>
           <br> <br> <br>
           <div class="social">
             <i class="social-item">
@@ -52,7 +54,7 @@
   <section class="pre-projects">
     <div class="u-wrapper">
       <div class="pre-projects-content">
-        <p>A lo largo de su carrera como jugador de baloncesto, a tenido el privilegio de trabajar en proyectos retadores e increíbles</p>
+        <p>Una persona capaz de dar todo dentro de una cancha a sus 37 años de edad</p>
         <p >
           Aquí hay algunos que me gustaría compartir.
         </p>
@@ -90,11 +92,11 @@
             <img src="images/LEBRON.jpg" alt="">
           </div>
           <p class="testimony-copy">
-            LeBron Raymone James Sr. (Akron, Ohio, 30 de diciembre de 1984) 
-            es un jugador de baloncesto estadounidense que actualmente pertenece a la plantilla de Los Angeles Lakers de la NBA. 
-            Con 2,06 metros de estatura, su posición es la de alero, pero su talento, 
-            versatilidad y poderío físico le permiten jugar tanto de base como de ala-pívot.​ 
-            James es considerado como uno de los mejores jugadores de baloncesto del mundo y de la historia.2
+            James, popularmente conocido como "The King", "King James" y "The Chosen One", 
+            lideró a los Cavaliers a sus primeras Finales de la NBA en 2007, donde cayeron ante San Antonio Spurs. 
+            Desde los Playoffs de 2006, Cleveland estuvo siempre presente en la fase final de la NBA hasta su salida de 
+            la franquicia en 2010. Desde su regreso, en 2014, los Cavs disputaron cuatro Finales de la NBA
+             consecutivas, donde conquistaron su primer título como franquicia en 2016. 
           </p>
           <p class="testimony-title">
             LEBRON JAMES / CREADOR DE LA MARCA
